[package]
name = "posix-invariant-checker"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A FUSE shim to ensure the underlying filesystem is behaving according to the POSIX spec."
repository = "https://github.com/chordtoll/PosInvCk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.12.0"
lazy_static = "1.4.0"
libc = { default-features = false, version = "0.2.142" }
path-clean = "1.0.1"
procfs = { default-features = false, version = "0.15.1" }
