[package]
name = "posix-invariant-checker"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A FUSE shim to ensure the underlying filesystem is behaving according to the POSIX spec."
repository = "https://github.com/chordtoll/PosInvCk"
rust-version = "1.66.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.12.0"
lazy_static = "1.4.0"
libc = { default-features = false, version = "0.2.142" }
procfs = { default-features = false, version = "0.15.1" }
