[package]
name = "posix-invariant-checker"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A FUSE shim to ensure the underlying filesystem is behaving according to the POSIX spec."
repository = "https://github.com/chordtoll/PosInvCk"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asserteq_pretty = "0.0"
asserteq_pretty_macros = "0.0"
fuser = "0.14.0"
lazy_static = "1.4.0"
libc = { default-features = false, version = "0.2.149", features = ["extra_traits"] }
maplit = "1.0.2"
once_cell = "1.19.0"
procfs = { default-features = false, version = "0.16.0" }
ron = "0.8.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.32"
stfu8 = "0.2.6"
walkdir = { version = "2.3.3", optional = true }
xattr = "1.3.1"



[features]
default = ["check-meta", "check-dirs", "check-data"]
check-meta = ["check-contents"]
check-dirs = ["check-contents", "check-meta"]
check-data = ["check-contents", "check-meta"]
check-xattr = ["check-contents", "check-meta"]
check-contents = ["walkdir"]

[workspace]
members=[]

[dev-dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
